# trik-ros

./: CMakeLists.txt  nodelet_trik.xml  package.xml  setup.sh  trik_nodelet.xml
launch/: nodelet_manager.launch  standalone.launch  trik.launch  trik_nodelet.launch
nodelets/: led_distance_nodelet.xml  trik_nodelet.xml
src/: led.h  ledCommand.h  ledDistance.cpp  ledDistanceNodelet.cpp  led_distance.cpp  motor.cpp  motor.h  node.cpp  nodelet.cpp  sensor.cpp  sensor.h  standalone_node.cpp  trik.cpp  trik.h  trikNode.cpp  trikNodelet.cpp  trik_nodelet.cpp
