<?xml version="1.0"?>
<package>
  <name>trik_ros</name>
  <version>0.1.0</version>
  <description>The trik package</description>

  <maintainer email="eugene.auduchinok@gmail.com">Eugene Auduchinok</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/auduchinok/trik-ros</url>
  <author email="eugene.auduchinok@gmail.com">Eugene Auduchinok</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>nodelet</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>nodelet</run_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_trik.xml" />
  </export>
</package>
